# python-ai-course-python-zero-dev-hero

./: README.md  Untitled.ipynb  main.py  pyproject.toml  python-ai-presentation.ipynb  rise.css
infra/: .env  deploy-resources.ps1  deploy-resources.sh  main.bicep  storage.bicep  vm.bicep
n8n/: n8n_workflow_automation.pptx  presentation.md
n8n/infra/: deploy.ps1  main.bicep
