[project]
name = "python-ai-course-python-zero-mcp-hero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "dotenv-python>=0.0.1",
    "jupyterlab-rise>=0.43.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.2",
    "openai>=1.81.0",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]
